--- a/credit_card_fraud_eda.ipynb
+++ b/credit_card_fraud_eda.ipynb
@@ -73,7 +73,7 @@
       "metadata": {
         "id": "nua2DjnYPzjJ"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -104,7 +104,7 @@
         },
         "outputId": "604f237d-a1f7-42ed-ea43-c7013aa717d7"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -619,7 +619,7 @@
         },
         "outputId": "a190e020-4b2c-48b7-87a6-af8cb874052b"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -668,7 +668,7 @@
         },
         "outputId": "2cac4ae7-4416-4c6e-fab5-5993e6a182e8"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -899,7 +899,7 @@
         },
         "outputId": "38b6d33e-c300-4608-b84e-6cacde4b1c24"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -994,7 +994,7 @@
         },
         "outputId": "61dcde00-0d39-46b4-8d71-8ec76fe3a82d"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1085,7 +1085,7 @@
         },
         "outputId": "c392e8d7-8d9d-47f9-ff05-3ea80dde34f7"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1300,7 +1300,7 @@
         },
         "outputId": "4417f30d-546a-4538-be46-c694999697ea"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1362,7 +1362,7 @@
         },
         "outputId": "6a30f829-6aa3-4850-d8a5-c86ffe752d35"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1438,7 +1438,7 @@
         },
         "outputId": "3b2fdb67-828b-4eba-89d6-5aa28d810697"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1512,6 +1512,19 @@
       ],
       "metadata": {
         "id": "lgdtk2mxdLKU"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "*Fuente del dataset:*  \n",
+        "Este conjunto de datos fue obtenido de la plataforma Kaggle.\n",
+        "\n",
+        "Disponible en:\n",
+        "https://www.kaggle.com/datasets/mlg-ulb/creditcardfraud"
+      ],
+      "metadata": {
+        "id": "FXzPE5J5K4yH"
       }
     }
   ]
